--- a/public/frontend/css/shop.css
+++ b/public/frontend/css/shop.css
@@ -758,23 +758,25 @@ transition: 0.3s;
   /* ====== Popular Section End Here ====== */
   /* ------------------------ Discount Start Here ------------ */
   .discount {
-	transform: translateY(60%);
-	margin-top: 20px;
-  }
-  .discount img{
-	padding-top: 45px;
-  }
+    /* ... existing styles ... */
+    width: 15%; /* For example, ensure the container takes up most of the page width */
+    margin-left: auto;
+    margin-right: auto;
+	margin-top: 1420px; /* Center the container if you set a max-width */
+}
+  
   
   /* ------------------------ Discount End Here ------------ */
   /* ------------------------ Best Sale Products Start Here ------------ */
   .saleProducts {
-	transform: translateY(50%);
+	margin-top: 400px;
   }
   .saleProducts h3 {
+	margin-top: 20px;
         padding: 40px;
 	font-family: var(--font-family);
 	font-weight: 500;
-	font-size: 20px;
+	font-size: 25px;
 	line-height: 150%;
 	color: var(--gray-scale-gray-–-900);
   }
@@ -1089,6 +1091,7 @@ transition: 0.3s;
     background-position: center;
     position: relative;
     overflow: hidden;
+	margin-top: 50px;
 }
 .footer h5 {
     margin-bottom: 20px;
